--- a/index.html
+++ b/index.html
@@ -29,13 +29,29 @@
         </a>
     </article>
     <article>
-        <img src="./img/img2.JPG" alt="">
-        <img src="./img/img3.JPG" alt="">
-        <img src="./img/img4.JPG" alt="">
-        <img src="./img/img5.JPG" alt="">
-        <img src="./img/img6.JPG" alt="">
-        <img src="./img/img7.JPG" alt="">
-        <img src="./img/img8.JPG" alt="">
+        <img src="./img/img2.JPG" loading="lazy" alt="">
+        <img src="./img/img3.JPG" loading="lazy" alt="">
+        <img src="./img/img4.JPG" loading="lazy" alt="">
+        <img src="./img/img5.JPG" loading="lazy" alt="">
+        <img src="./img/img6.JPG" loading="lazy" alt="">
+        <img src="./img/img7.JPG" loading="lazy" alt="">
+        <img src="./img/img8.JPG" loading="lazy" alt="">
+        <img src="./img/img9.JPG" loading="lazy" alt="">
+        <img src="./img/img10.JPG" loading="lazy" alt="">
+        <img src="./img/img11.JPG" loading="lazy" alt="">
+        <img src="./img/img12.JPG" loading="lazy" alt="">
+        <img src="./img/img13.JPG" loading="lazy" alt="">
+        <img src="./img/img14.JPG" loading="lazy" alt="">
+        <img src="./img/img15.JPG" loading="lazy" alt="">
+        <img src="./img/img16.JPG" loading="lazy" alt="">
+        <img src="./img/img17.JPG" loading="lazy" alt="">
+        <img src="./img/img18.JPG" loading="lazy" alt="">
+        <img src="./img/img19.JPG" loading="lazy" alt="">
+        <img src="./img/img20.JPG" loading="lazy" alt="">
+        <img src="./img/img21.JPG" loading="lazy" alt="">
+        <img src="./img/img22.JPG" loading="lazy" alt="">
+        <img src="./img/img23.JPG" loading="lazy" alt="">
+        <img src="./img/img24.JPG" loading="lazy" alt="">
     </article>
 </body>
 </html>
