--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a id="box1" target="blank" class="box" href="https://weibo.com/p/100808bac05b28b920c4013f44d7b9879490b3/super_index">
             <p>超话</p>
         </a>
-        <a id="box2" href="javascript:;" class="box">
-            <p>代言上线中...</p>
+        <a id="box2" href="promote.html" class="box">
+            <p>代言</p>
         </a>
     </article>
     <article>
@@ -52,6 +52,8 @@
         <img src="https://i.loli.net/2021/04/09/dM3AgHNiRuZ7c4v.jpg" loading="lazy" alt="山河令22">
         <img src="https://i.loli.net/2021/04/09/cRjnW1r3ih9ETMU.jpg" loading="lazy" alt="山河令23">
         <img src="https://i.loli.net/2021/04/09/AX5EYTMCeSudlUa.jpg" loading="lazy" alt="山河令24">
+        <img src="https://i.loli.net/2021/04/15/Hwoyt4FzsBmK8va.png" loading="lazy" alt="山河令25">
+        <img src="https://i.loli.net/2021/04/15/beTgdOmXazY3oND.png" loading="lazy" alt="山河令26">
     </article>
 </body>
 </html>
